--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,8 @@ en:
       picture: "Picture"
       status: "Status"
       role: "Role"
+      birthday: "Birthday"
+      gender: "Gender"
   page:
     home: "Home"
     courses: "All Course"
@@ -40,6 +42,7 @@ en:
     course_create: "Create new Course"
     user_edit: "Edit an User"
     course_edit: "Edit a Course"
+    assign_trainee: "Assign Trainee"
     subject_edit: "Edit an Subject"
     User_list: "User List"
     task_list: "Task List"
@@ -51,6 +54,7 @@ en:
     close: "Close"
   messages:
     save_success: "Save successfully!"
+    save_unsuccess: "Save Unsuccessful!"
     update_success: "Update successfully!"
     destroy_success: "Delete successfully!"
     destroy_error: "Delete failed!"
@@ -65,6 +69,9 @@ en:
   ui_control_text_js:
     delete: "Delete"
     cancel: "Cancel"
+  date:
+    formats:
+      default: "%d-%m-%Y"
   helpers:
     label:
       user:
@@ -89,6 +96,9 @@ en:
       create: "Create"
       submit: "Save"
       update: "Update"
+    button:
+      close: "Close"
+      assign: "Assign"
   user:
     status:
       active: "ACTIVE"
@@ -99,8 +109,8 @@ en:
       list_course: "Course list is participating"
       list_mem: "List Supervisor and member"
     role:
-      trainee: "TRAINEE"
-      supervisor: "SUPERVISOR"
+      trainee: "Trainee"
+      supervisor: "Supervisor"
     gender:
       male: "Male"
       female: "Female"
