--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,10 +1,20 @@
 en:
   title: "FRAMGIA TRAINING SYSTEM"
   session:
-    login: "Please sign in"
+    login: "Please login"
     btn: "Login"
     remember: "Remember me"
+    login_msg: "Wellcome back %{email}"
+    logout_msg: "See you agian"
+    login_fail: "Email or password wrong! please try agian"
+    placeholder_email: "Email address"
+    placeholder_pass: "Password"
   table:
+    course_name: "Course name"
+    duration: "Duration"
+    status: "Status"
+    date_start: "Date start"
+    date_end: "Date end"
     column:
       order: "#"
       avatar: "Avatar"
@@ -14,6 +24,9 @@ en:
       name: "Name"
       picture: "Picture"
       status: "Status"
+      birthday: "Birthday"
+      gender: "Gender"
+      role: "Role"
   page:
     home: "Home"
     courses: "All Course"
@@ -26,14 +39,20 @@ en:
     course_create: "Create new Course"
     user_edit: "Edit an User"
     course_edit: "Edit a Course"
+    assign_trainee: "Assign Trainee"
     subject_edit: "Edit an Subject"
     User_list: "User List"
     task_list: "Task List"
     course_list: "Course List"
     subject_list: "Subject List"
     task_edit: "Edit a Task"
+    user_page: "User page"
+    dropdown: "Menu"
+    close: "Close"
+    assign_supervisor: "Assign Supervisor"
   messages:
     save_success: "Save successfully!"
+    save_unsuccess: "Save Unsuccessful!"
     update_success: "Update successfully!"
     destroy_success: "Delete successfully!"
     destroy_error: "Delete failed!"
@@ -48,6 +67,9 @@ en:
   ui_control_text_js:
     delete: "Delete"
     cancel: "Cancel"
+  date:
+    formats:
+      default: "%d-%m-%Y"
   helpers:
     label:
       user:
@@ -67,14 +89,26 @@ en:
         picture: "Picture"
       course:
         course_subjects: "Subject(s)"
+        create: "Created at"
     submit:
       create: "Create"
       submit: "Save"
       update: "Update"
+    button:
+      close: "Close"
+      assign: "Assign"
   user:
+    status:
+      active: "ACTIVE"
+      pedding: "PEDDING"
+      finish: "FINISH"
+    trainee:
+      info: "Infomation"
+      list_course: "Course list is participating"
+      list_mem: "List Supervisor and member"
     role:
-      trainee: "Trainee"
-      suppervisor: "Suppervisor"
+      trainee: "TRAINEE"
+      supervisor: "SUPERVISOR"
     gender:
       male: "Male"
       female: "Female"
