--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,9 @@
 en:
   date:
     formats:
-      default: "%d-%m-%Y"
+      default: "%Y-%m-%d"
+      short: "%b %d"
+      long: "%B %d, %Y"
   title: "FRAMGIA TRAINING SYSTEM"
   session:
     login: "Please login"
